--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/erankitsrivastava"><i class="fab fa-github"></i></a>
 			<a target="_blank" href="https://twitter.com/sivastava_ankit"><i class="fab fa-twitter"></i></a>
-			<a target="_blank" href="https://stackoverflow.com/users/7725002/ankit-srivastava"><i class="fab fa-stack-overflow"></i></a>
+			<a target="_blank" href="https://magento.stackexchange.com/users/71417/ankit-srivastava"><i class="fab fa-stack-overflow"></i></a>
 			<a target="_blank" href="https://in.linkedin.com/in/er-ankit-srivastava"><i class="fab fa-linkedin"></i></a>
     </div>
 	</main>
