--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 	<main>
 		<div class="intro">Hello, I'm Ankit Srivastava!</div>
-		<div class="tagline">All-Star Dev | Mageto Developer | Blogger </div>
+		<div class="tagline">All-Star Dev | Magento Developer | Blogger </div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/erankitsrivastava"><i class="fab fa-github"></i></a>
